# wine-pairing-app

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  TODOs  pyproject.toml
.streamlit/: config.toml
app/: constants.py  main.py  main_2.py  pyproject.toml  run.sh  setup.sh  utils.py
app/app/: constants.py  main.py  utils.py
app/app/tests/: conftest.py  embedding_test.py  encryption_test.py
app/app/utils/: embedding.py  encryption.py  gis.py
app/constants/: constants.py
app/data/: data.pkl
app/scripts/: encrypt_data.py
app/utils/: embedding_utils.py  gis_utils.py
data/: data.pkl
scripts/: encrypt_data.py
src/: constants.py
