[tool.poetry]
name = "wine-recommendation-app"
version = "0.1.0"
description = "Wine Recommendation App"
authors = ["PhN01"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.20.3"
pandas = "^1.3.4"
pydeck = "^0.7.1"
requests = "^2.26.0"
scipy = "^1.7.1"
streamlit = "^1.10.0"
cryptography = "^3.4.8"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = "env"
line-length = 88
target-version = ['py35', 'py36', 'py37', 'py38']

[tool.isort]
profile = "black"
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = ["env"]
use_parentheses = true

[tool.coverage.run]
command_line = "-m pytest"
omit = [
  "*/tests/*",
  "*/virtualenvs/*",
]

[tool.coverage.report]
fail_under = 90.0
show_missing = true
skip_empty = true
